# 10-tdelibs

./: README.md  tde-tdelibs.spec
tde-tdelibs/arts/kde/: CMakeLists.txt  Makefile.am  README  kartsdispatcher.h  kartsfloatwatch.h  kartsserver.cpp  kartsserver.h  kaudioconverter.cpp  kaudioconverter.h  kaudiomanagerplay.cpp  kaudiomanagerplay.h  kaudioplaystream.cpp  kaudioplaystream.h  kaudioplaystream_p.h  kaudiorecordstream.cpp  kaudiorecordstream.h  kaudiorecordstream_p.h  kconverttest.cpp  kconverttest.h  kdatarequest_impl.h  kioinputstream_impl.cpp  kioinputstream_impl.h  kplayobject.cpp  kplayobject.h  kplayobjectcreator.cpp  kplayobjectcreator.h  kplayobjectfactory.cpp  kplayobjectfactory.h  kplayobjectfactory_p.h  kvideowidget.cpp  kvideowidget.h
tde-tdelibs/dcop/dcopidl/: CMakeLists.txt  Makefile.am  dcopidl_output.kidl  scanner.cpp  scanner.ll  yacc.cpp  yacc.cpp.h  yacc.yy
tde-tdelibs/doc/common/: CMakeLists.txt  Doxyfile.global  README.Doxygen  doxygen.css  footer.html  header.html  mainfooter.html  mainheader.html  tde.css
tde-tdelibs/interfaces/kregexpeditor/: CMakeLists.txt  kregexpeditor.desktop  kregexpeditorinterface.h
tde-tdelibs/kate/scripts/: CMakeLists.txt  jstest.desktop
tde-tdelibs/kdoctools/: CMakeL10n.txt  CMakeLists.txt  ConfigureChecks.cmake  Mainpage.dox  Makefile.am  README  main.cpp  main_ghelp.cpp  meinproc.cpp  template.docbook  xslt.cpp
tde-tdelibs/kdoctools/customization/: catalog  catalog.xml  tde-man.xsl  tde-navig.xsl
tde-tdelibs/kglib/: CMakeLists.txt  TGlibEventLoop.h
tde-tdelibs/libtdemid/: CMakeLists.txt  Makefile.am  alsaout.cpp  alsaout.h  dattypes.cpp  deviceman.cpp  fmout.cpp  gusout.cpp  libtdemid.cpp  midfile.cpp  midimapper.cpp  midiout.cpp  midistat.cpp  notearray.cpp  player.cpp  player.h  sndcard.h  synthout.cpp  track.cpp  voiceman.cpp
tde-tdelibs/libtdemid/tests/: Makefile.am
tde-tdelibs/tdeabc/vcard/: CMakeLists.txt  Enum.cpp  Makefile.am  RToken.cpp
tde-tdelibs/tdeio/: CMakeL10n.txt  CMakeLists.txt  Mainpage.dox  Makefile.am  application.desktop  data.protocol  kcomprfilter.desktop  kdatatool.desktop  kpasswdserver.desktop  kscan.desktop  kurifilterplugin.desktop  renamedlgplugin.desktop  tdecmodule.desktop  tdefileplugin.desktop
tde-tdelibs/tdeio/bookmarks/: CMakeLists.txt  Makefile.am  dptrtemplate.h  kbookmark.cpp  kbookmark.h  kbookmarkbar.cpp  kbookmarkbar.h  kbookmarkdombuilder.cpp  kbookmarkdombuilder.h  kbookmarkdrag.cpp  kbookmarkdrag.h  kbookmarkexporter.cpp  kbookmarkexporter.h  kbookmarkimporter.cpp  kbookmarkimporter.h  kbookmarkimporter_crash.cpp  kbookmarkimporter_crash.h  kbookmarkimporter_ie.cpp  kbookmarkimporter_ie.h  kbookmarkimporter_kde1.cpp  kbookmarkimporter_kde1.h  kbookmarkimporter_ns.cpp  kbookmarkimporter_ns.h  kbookmarkimporter_opera.cpp  kbookmarkimporter_opera.h  kbookmarkmanager.cpp  kbookmarkmanager.h  kbookmarkmenu.cpp  kbookmarkmenu.h  kbookmarkmenu_p.h  kbookmarknotifier.h
tde-tdelibs/tdeio/httpfilter/: CMakeLists.txt  Makefile.am  httpfilter.cpp  httpfilter.h
tde-tdelibs/tdeio/kpasswdserver/: CMakeLists.txt  Makefile.am  kpasswdserver.cpp  kpasswdserver.h
tde-tdelibs/tdeio/kssl/: CMakeLists.txt  Makefile.am  kopenssl.cpp  kopenssl.h  ksmimecrypto.cpp  kssl.cpp  kssl.h  ksslcallback.c  ksslcertchain.cpp  ksslcertchain.h  ksslcertdlg.cpp  ksslcertdlg.h  ksslcertificate.cpp  ksslcertificate.h  ksslcertificatehome.cpp  ksslcsessioncache.cpp  kssldefs.h  ksslinfodlg.cpp  ksslinfodlg.h  ksslkeygen.cpp  ksslkeygen.h  ksslpeerinfo.cpp  ksslpemcallback.cpp  ksslpkcs12.cpp  ksslpkcs12.h  ksslpkcs7.cpp  ksslpkcs7.h  ksslsession.cpp  ksslsettings.cpp  ksslsettings.h  ksslutils.cpp  ksslutils.h
tde-tdelibs/tdeio/misc/: CMakeLists.txt  Makefile.am  mms.protocol  tdeio_uiserver.desktop  tdetelnetservice.cpp  uiserver.cpp  uiserver.h
tde-tdelibs/tdeio/tdefile/: CMakeLists.txt  NOTES  images.h  kacleditwidget.cpp  kacleditwidget.h  kacleditwidget_p.h  kcombiview.cpp  kcombiview.h  kcustommenueditor.cpp  kcustommenueditor.h  kdirselectdialog.cpp  kdirselectdialog.h  kdirsize.cpp  kdirsize.h  kdiskfreesp.cpp  kdiskfreesp.h  kencodingfiledialog.cpp  kencodingfiledialog.h  kicondialog.cpp  kicondialog.h  kimagefilepreview.cpp  kimagefilepreview.h  kmetaprops.cpp  kmetaprops.h  knotifydialog.cpp  knotifydialog.h  kopenwith.cpp  kopenwith.h  kopenwith_p.h  kpreviewprops.cpp  kpreviewprops.h  kpreviewwidgetbase.h  kpropertiesdesktopadvbase.ui  kpropertiesdialog.cpp  kpropertiesdialog.h  kpropsdlgplugin.desktop  kurlbar.cpp  kurlbar.h  kurlcombobox.cpp  kurlcombobox.h  (+35 more)
tde-tdelibs/tdeio/tdeio/: CMakeLists.txt  chmodjob.cpp  chmodjob.h  configure.in.in  connection.cpp  connection.h  dataslave.cpp  dataslave.h  davjob.cpp  davjob.h  defaultprogress.cpp  defaultprogress.h  forwardingslavebase.cpp  forwardingslavebase.h  global.cpp  global.h  job.cpp  job.h  jobclasses.h  kacl.cpp  kacl.h  kar.cpp  kautomount.cpp  kautomount.h  kdatatool.cpp  kdatatool.h  kdirlister.cpp  kdirlister.h  kdirlister_p.h  kdirwatch.cpp  kdirwatch.h  kdirwatch_p.h  kfilterbase.h  kfilterdev.cpp  kfilterdev.h  klimitediodevice.h  kmimetype.cpp  kmimetype.h  kmimetypechooser.cpp  kmimetypechooser.h  (+65 more)
tde-tdelibs/tdeio/tdeioexec/: CMakeL10n.txt  Makefile.am  main.cpp  main.h
tde-tdelibs/tdeio/tests/: CMakeLists.txt  Makefile.am  dataprotocoltest.cpp  dummymeta.h  jobtest.cpp  jobtest.h  kdcopcheck.cpp  kdcopcheck.h  kdirlistertest.cpp  kdirlistertest.h  kdirwatchtest.cpp  kdirwatchtest.h  kdirwatchunittest.cpp  kdirwatchunittest.h  kfiltertest.cpp  kmimetypetest.sh.cmake  kprotocolinfotest.cpp  kruntest.cpp  kruntest.h  kurifiltertest.cpp  previewtest.cpp  previewtest.h  speed.cpp  speed.h  tdeioslavetest.cpp  tdeioslavetest.h
tde-tdelibs/tdemarkdown/: CMakeL10n.txt  CMakeLists.txt  README.md  markdown_part.cpp  markdown_part.desktop  markdown_part.h  markdown_part.rc
tde-tdelibs/tdemarkdown/md4c/: CMakeLists.txt
tde-tdelibs/tdeprint/filters/: CMakeLists.txt  enscript.desktop  imagetops.desktop  pdf2ps.desktop  pdfwrite.desktop  poster.desktop  ps2pdf.desktop  ps2pdf.xml  psbook.desktop  psbook1.desktop  (+4 more)
(+4314 files in other folders)
