#################################################
#
#  (C) 2010 Serghei Amelian
#  serghei (DOT) amelian (AT) gmail.com
#
#  Improvements and feedback are welcome
#
#  This file is released under GPL >= 2
#
#################################################

##### other data ################################

install(
  FILES
    1.png 2.png 3.png 4.png 5.png 6.png 7.png 8.png 9.png 10.png
    appheader.html artistic-license.html block_title_bottom.png
		block_title_mid.png block_title_top.png bottom1.png bottom2.png
    bottom-left.png bottom-middle.png bottom-right.png bsd-license.html
    docheadergears.png doctop1a.png doctop1b.png doctop1.png
    doctop2.png doxygen.css favicon.ico fdl-license
    fdl-license.html fdl-notice.html footer.html flat.css
    gpl-license gpl-license.html grad.png headerbg.png
    header.html kde_gear_64.png kde_logo_bg.png kde_logo.png
    kmenu.png lgpl-license lgpl-license.html mainfooter.html
    mainheader.html print.css qpl-license.html shadow.png tde-common.css
    tabs.css tde.css tde-default.css tde-docs.css tde-localised.css.template tde-web.css
    top.jpg top-left.jpg top-left.png top-middle.png top-right-konqueror.png
		top-right.jpg top-right.png top-trinity.jpg web-docbottom.png
    web-doctop.png x11-license.html xml.dcl
  DESTINATION
    ${HTML_INSTALL_DIR}/en/common )
